fix(kernel): correct isomorphic-git imports for NodeNext compatibility
- Changed  to  to fix missing export error.
- Changed  to  to properly handle CommonJS namespace in strict mode.

feat: implement tool orchestration and transactional db
- Added synchronous  to VFS for module loading. - Implemented  shim in Sandbox for calling other tools. - Added  with Transactional Interface. - Wrapped tool execution in . - Added  to bridge.

--- a/.relay/transactions/1.yaml
+++ b/.relay/transactions/1.yaml
@@ -223,6 +223,6 @@ approved: true
 linesAdded: 155
 linesRemoved: 0
 linesDifference: 155
-gitCommittedAt: null
+gitCommittedAt: '2025-11-27T10:05:15.003Z'
 status: committed
 id: 1
