--- a/.relay/transactions/12.yaml
+++ b/.relay/transactions/12.yaml
@@ -341,6 +341,6 @@ approved: true
 linesAdded: 59
 linesRemoved: 3
 linesDifference: 62
-gitCommittedAt: null
+gitCommittedAt: '2025-11-27T10:05:15.003Z'
 status: committed
 id: 12
