--- a/.relay/transactions/4.yaml
+++ b/.relay/transactions/4.yaml
@@ -257,6 +257,6 @@ approved: true
 linesAdded: 151
 linesRemoved: 1
 linesDifference: 152
-gitCommittedAt: null
+gitCommittedAt: '2025-11-27T10:05:15.003Z'
 status: committed
 id: 4
