--- a/.relay/transactions/6.yaml
+++ b/.relay/transactions/6.yaml
@@ -288,6 +288,6 @@ approved: true
 linesAdded: 184
 linesRemoved: 1
 linesDifference: 185
-gitCommittedAt: null
+gitCommittedAt: '2025-11-27T10:05:15.003Z'
 status: committed
 id: 6
