--- a/.relay/transactions/7.yaml
+++ b/.relay/transactions/7.yaml
@@ -262,6 +262,6 @@ approved: true
 linesAdded: 167
 linesRemoved: 0
 linesDifference: 167
-gitCommittedAt: null
+gitCommittedAt: '2025-11-27T10:05:15.003Z'
 status: committed
 id: 7
