feat(core): implement registry, gitops persistence, and sandbox namespacing - Added  kernel module to manage . - Updated  tool to auto-register and git-persist tools. - Refactored Sandbox Bridge to expose  namespace instead of global functions. - Updated CLI init to scaffold full directory structure.
style: fix linting errors
Add explicit types, suppress console logs for CLI/kernel output,  and fix boolean check strictness issues.

--- a/.relay/transactions/14.yaml
+++ b/.relay/transactions/14.yaml
@@ -153,6 +153,6 @@ approved: true
 linesAdded: 2
 linesRemoved: 2
 linesDifference: 4
-gitCommittedAt: null
+gitCommittedAt: '2025-11-27T10:24:36.230Z'
 status: committed
 id: 14
