--- a/.relay/transactions/15.yaml
+++ b/.relay/transactions/15.yaml
@@ -926,6 +926,6 @@ approved: true
 linesAdded: 180
 linesRemoved: 20
 linesDifference: 200
-gitCommittedAt: null
+gitCommittedAt: '2025-11-27T10:24:36.230Z'
 status: committed
 id: 15
