--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,38 @@
 # relay state
 #/.relay/
+
+# Dependencies
+node_modules/
+
+# Build Output
+dist/
+*.tsbuildinfo
+
+# TGP Local Sandbox
+.tgp/
+
+# Environment Variables
+.env
+.env.local
+.env.*.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs/
+*.log
+
+# OS Files
+.DS_Store
+Thumbs.db
+
+# IDEs
+.vscode/
+.idea/
+
+# Testing
+coverage/
+
+# Temporary
+tmp/
