--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tgp": "node bin/tgp.js"
   },
@@ -22,15 +24,18 @@
     "tgp": "./bin/tgp.js"
   },
   "dependencies": {
-    "zod": "^3.25.76",
-    "zod-to-json-schema": "^3.22.4",
+    "esbuild": "^0.19.12",
+    "isolated-vm": "^4.7.2",
     "isomorphic-git": "^1.35.1",
     "memfs": "^4.51.0",
-    "isolated-vm": "^4.7.2",
-    "esbuild": "^0.19.12"
+    "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.19.25",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
+    "eslint": "^9.39.1",
     "typescript": "^5.9.3"
   }
 }
