feat: Introduce TGP Class and Harden Sandbox Bridge - Refactored  to export a  class implementing . - Aligned System Prompt with README specifications. - Hardened  injection in  to correctly map the  namespace and functions. - Maintained backward compatibility for .

--- a/.relay/transactions/16.yaml
+++ b/.relay/transactions/16.yaml
@@ -1119,6 +1119,6 @@ approved: true
 linesAdded: 196
 linesRemoved: 47
 linesDifference: 243
-gitCommittedAt: null
+gitCommittedAt: '2025-11-27T10:47:11.764Z'
 status: committed
 id: 16
