--- a/.relay/transactions/17.yaml
+++ b/.relay/transactions/17.yaml
@@ -1303,6 +1303,6 @@ approved: true
 linesAdded: 29
 linesRemoved: 8
 linesDifference: 37
-gitCommittedAt: null
+gitCommittedAt: '2025-11-27T10:47:11.764Z'
 status: committed
 id: 17
