refactor: harden kernel and align with readme - feat(sandbox): enforce allowedDirs in filesystem bridge - refactor(git): formalize strategies and improve error handling - fix(db): warn on unsupported dialects instead of silent failure - fix(kernel): improve boot error logging - docs(cli): sync init template with official docs
refactor(sandbox): Simplify db context passing to bridge
Refactored  to accept a dependency object () instead of multiple parameters. This makes the function signature cleaner and its dependencies more explicit.
The  function now constructs this dependency object, injecting the transactional  object as the  implementation. This preserves the atomicity of tool executions while decoupling the bridge from the transaction lifecycle management in .

refactor(sandbox): remove implicit db transaction wrapping for tool execution

--- a/.relay/transactions/20.yaml
+++ b/.relay/transactions/20.yaml
@@ -673,6 +673,6 @@ approved: true
 linesAdded: null
 linesRemoved: null
 linesDifference: null
-gitCommittedAt: null
+gitCommittedAt: '2025-11-27T20:44:09.008Z'
 status: committed
 id: 20
