feat: Production hardening and observability - Added Logger interface and injection for host observability. - Implemented structured tool execution results (capturing stderr/stdout). - Enhanced GitOps strategy to support feature branching on PR mode. - Allowed DB driver injection in Kernel.
refactor: decouple database from sandbox environment
Removed the database bridge from the sandbox to ensure tools remain stateless. The  method is no longer exposed to the guest environment, and implicit dependencies on  in the sandbox bridge have been removed.

fix: resolve eslint errors and warnings
- Replace logical OR with nullish coalescing for safe defaults in kernel core and git. - Enforce strict boolean checks in execution tools. - Refactor catch blocks in sandbox to avoid 'any' and use type narrowing. - Suppress unavoidable 'any' for generic execution results.

--- a/.relay/transactions/18.yaml
+++ b/.relay/transactions/18.yaml
@@ -616,6 +616,6 @@ approved: true
 linesAdded: 131
 linesRemoved: 59
 linesDifference: 190
-gitCommittedAt: null
+gitCommittedAt: '2025-11-27T11:09:39.950Z'
 status: committed
 id: 18
