feat: Harden codebase for production readiness This commit implements several key features to move TGP from a prototype to a production-ready system: - GitOps: The 'pr' git strategy now automatically creates a pull request   on GitHub after pushing a new tool branch, completing the autonomous   code review workflow. - Sandbox: The tool execution sandbox now properly caches required modules   within a single run, improving performance and supporting circular   dependencies. - Dependencies: Removed the unused 'memfs' package. - Docs: Updated the README to clarify that database backends must be   injected by the host application, reflecting the actual architecture. - API: Refactored the DBBackend interface into the shared types for   easier implementation by consumers.

--- a/.relay/transactions/27.yaml
+++ b/.relay/transactions/27.yaml
@@ -1419,6 +1419,6 @@ approved: true
 linesAdded: 127
 linesRemoved: 40
 linesDifference: 167
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T01:24:36.847Z'
 status: committed
 id: 27
