--- a/.relay/transactions/29.yaml
+++ b/.relay/transactions/29.yaml
@@ -605,6 +605,6 @@ approved: true
 linesAdded: 8
 linesRemoved: 7
 linesDifference: 15
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T01:24:36.847Z'
 status: committed
 id: 29
