--- a/.relay/transactions/28.yaml
+++ b/.relay/transactions/28.yaml
@@ -331,6 +331,6 @@ approved: true
 linesAdded: 3
 linesRemoved: 10
 linesDifference: 13
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T01:24:36.847Z'
 status: committed
 id: 28
