refactor(core): Harden TGP kernel for production readiness     This commit implements a series of changes to make the TGP core more robust, secure, and developer-friendly.     - **Decouple DB Backend**: Removes the database configuration schema (`DBConfigSchema`) and the `createDBBackend` factory. The kernel now expects a `DBBackend` implementation to be injected by the host application, defaulting to a `NoOpDB` if not provided. This enforces a clear separation of concerns.     - **Streamline Public API**: Deletes the redundant `createTGP` and standalone `getSystemPrompt` factory functions. The `TGP` class is now the single, authoritative entry point for interacting with the kernel.     - **Harden Sandbox Fetch**: Implements a strict URL whitelist for the sandbox's `fetch` bridge. The allowed URL prefixes must be defined in `tgp.config.ts` via the new `allowedFetchUrls` property. Network access is disabled by default if this is not configured. The fetch proxy is also updated to correctly handle async `json()` and `text()` methods.     - **Improve DX**: Adds a `dev` script to `package.json` using `tsx` to enable running the CLI directly from TypeScript source, improving the development workflow. A stray duplicate `Kernel` interface file has been removed.
    refactor(kernel): Decouple database from TGP core
    Removes the DBBackend interface and all related abstractions from the TGP kernel.
    This change simplifies the kernel's responsibilities, focusing it solely on providing a secure execution environment. The host application is now responsible for database interactions.
    Introduces a new `exec_sql` tool pattern via a `createSqlTools` factory. This allows the host to inject its own database execution logic, creating a clean and robust boundary between the agent's capabilities and the application's core infrastructure.

    feat(sandbox): implement secure dependency injection for tools
    Introduces a synchronous, on-the-fly bundler using esbuild to securely

--- a/.relay/transactions/30.yaml
+++ b/.relay/transactions/30.yaml
@@ -1780,6 +1780,6 @@ approved: true
 linesAdded: 88
 linesRemoved: 48
 linesDifference: 136
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T01:26:42.901Z'
 status: committed
 id: 30
