--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "isolated-vm": "^6.0.2",
     "isomorphic-git": "^1.35.1",
     "zod": "^3.25.76",
-    "zod-to-json-schema": "^3.22.4"
+    "zod-to-json-schema": "^3.22.4",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/node": "^20.19.25",
@@ -37,7 +38,6 @@
     "@typescript-eslint/parser": "^8.48.0",
     "eslint": "^9.39.1",
     "tsx": "^4.16.2",
-    "typescript": "^5.9.3",
     "vitest": "^1.6.0"
   }
 }
