refactor(kernel): implement AST parsing for registry and Adapter pattern for git providers

--- a/.relay/transactions/37.yaml
+++ b/.relay/transactions/37.yaml
@@ -1052,6 +1052,6 @@ approved: true
 linesAdded: 132
 linesRemoved: 69
 linesDifference: 201
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T01:54:13.984Z'
 status: committed
 id: 37
