docs(test): add comprehensive real-implementation test plans

--- a/.relay/transactions/38.yaml
+++ b/.relay/transactions/38.yaml
@@ -745,6 +745,6 @@ approved: true
 linesAdded: 127
 linesRemoved: 48
 linesDifference: 175
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T01:59:22.373Z'
 status: committed
 id: 38
