--- a/.relay/transactions/39.yaml
+++ b/.relay/transactions/39.yaml
@@ -261,6 +261,6 @@ approved: true
 linesAdded: 168
 linesRemoved: 0
 linesDifference: 168
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T02:19:29.867Z'
 status: committed
 id: 39
