--- a/repomix.config.json
+++ b/repomix.config.json
@@ -22,7 +22,10 @@
       "includeDiffs": false
     }
   },
-  "include": ["README.md","test-docs/"],
+  "include": [
+//"README.md",
+//"test-docs/"
+],
   "ignore": {
     "useGitignore": true,
     "useDefaultPatterns": true,
