fix: linting errors and tsconfig rootDir - Resolved unused variables in git kernel. - Fixed strict boolean expressions in registry and bundler. - Updated tsconfig to handle test folder inclusion correctly. - Adjusted package.json main entry point to match new build output structure.

--- a/.relay/transactions/43.yaml
+++ b/.relay/transactions/43.yaml
@@ -516,6 +516,6 @@ approved: true
 linesAdded: 242
 linesRemoved: 16
 linesDifference: 258
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T02:39:06.703Z'
 status: committed
 id: 43
