--- a/.relay/transactions/44.yaml
+++ b/.relay/transactions/44.yaml
@@ -133,6 +133,6 @@ approved: true
 linesAdded: 7
 linesRemoved: 2
 linesDifference: 9
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T02:39:06.703Z'
 status: committed
 id: 44
