--- a/.relay/transactions/42.yaml
+++ b/.relay/transactions/42.yaml
@@ -692,6 +692,6 @@ approved: true
 linesAdded: 180
 linesRemoved: 1
 linesDifference: 181
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T02:39:06.703Z'
 status: committed
 id: 42
