--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@tgp/core",
   "version": "0.0.1",
   "description": "The Tool Generation Protocol",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "type": "module",
   "scripts": {
     "build": "tsc",
