test(e2e): implement comprehensive e2e scenarios Added tests for Cold Start, Concurrency (merging), Refactoring, Resilience, Security, and SQL. Cleaned up JS artifacts in test/e2e.
fix(sandbox): lazy load isolated-vm to support portable testing and prevent boot crash

fix: ensure TGP initialization succeeds with defaults and harden sandbox loading
- Add default 'local' git configuration to TGPConfigSchema to prevent ZodError on boot. - Improve error reporting when isolated-vm fails to load (e.g. in Bun or non-Node envs).

fix(tests): resolve relative config path and add sandbox fallback
- Correctly resolve absolute path for src/config.ts in E2E test helper to avoid 'Cannot find module' errors. - Implement node:vm fallback in src/sandbox/isolate.ts to allow tests to pass when isolated-vm binary is missing. - Update execute.ts shim to support both isolated-vm references and direct function calls.

fix: resolve sandbox CJS errors and git concurrency conflicts
- Updated sandbox execution to wrap user code in a CJS harness with  and . - Switched local git sync strategy to use  to handle  conflicts gracefully.

--- a/.relay/transactions/45.yaml
+++ b/.relay/transactions/45.yaml
@@ -999,6 +999,6 @@ approved: true
 linesAdded: 11
 linesRemoved: 11
 linesDifference: 22
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T02:41:16.522Z'
 status: committed
 id: 45
