fix: build errors, lint rules, and e2e test stability
    feat: add dynamic sandbox API injection for host capabilities support

    refactor: Make Registry local-only and fix strict types.
    - Implemented `rebuild()` in Registry to scan tool files. - Stopped persisting `meta.json` to Git in `write_file`/`patch_file`. - Updated `.gitignore` template. - Fixed lint errors: `any` types, nullish coalescing, and non-null assertions.

    test: fix e2e harness path resolution and add pretest build
    Updates the E2E test utility to generate JavaScript configuration files that import from the compiled distribution. This fixes failures where the `bin/tgp.js` subprocess (running in standard Node) could not load TypeScript configuration files or resolve source paths. Also adds a `pretest` script to ensure `dist/` is available before tests run.

--- a/.relay/transactions/46.yaml
+++ b/.relay/transactions/46.yaml
@@ -1116,6 +1116,6 @@ approved: true
 linesAdded: 16
 linesRemoved: 321
 linesDifference: 337
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T06:18:25.370Z'
 status: committed
 id: 46
