--- a/.relay/transactions/48.yaml
+++ b/.relay/transactions/48.yaml
@@ -264,6 +264,6 @@ approved: true
 linesAdded: 8
 linesRemoved: 2
 linesDifference: 10
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T06:18:25.370Z'
 status: committed
 id: 48
