--- a/.relay/transactions/49.yaml
+++ b/.relay/transactions/49.yaml
@@ -683,6 +683,6 @@ approved: true
 linesAdded: 33
 linesRemoved: 9
 linesDifference: 42
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T06:18:25.370Z'
 status: committed
 id: 49
