--- a/.relay/transactions/50.yaml
+++ b/.relay/transactions/50.yaml
@@ -773,6 +773,6 @@ approved: true
 linesAdded: 35
 linesRemoved: 11
 linesDifference: 46
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T06:18:25.370Z'
 status: committed
 id: 50
