--- a/.relay/transactions/47.yaml
+++ b/.relay/transactions/47.yaml
@@ -260,6 +260,6 @@ approved: true
 linesAdded: 16
 linesRemoved: 4
 linesDifference: 20
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T06:18:25.370Z'
 status: committed
 id: 47
