test: add e2e scenarios for tool composition and registry integrity Added tests to verify: 1. Orchestrator capability: Tools can require() other tools. 2. Registry integrity: meta.json is updated with JSDoc descriptions. 3. Standards: Linter correctly flags magic numbers and hardcoded secrets.
test: implement integration test suite with real Git and SQLite dependencies

--- a/.relay/transactions/55.yaml
+++ b/.relay/transactions/55.yaml
@@ -186,6 +186,6 @@ approved: true
 linesAdded: 2
 linesRemoved: 1
 linesDifference: 3
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T07:03:24.546Z'
 status: committed
 id: 55
