--- a/.relay/transactions/56.yaml
+++ b/.relay/transactions/56.yaml
@@ -237,6 +237,6 @@ approved: true
 linesAdded: 1
 linesRemoved: 1
 linesDifference: 2
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T07:03:24.546Z'
 status: committed
 id: 56
