fix(types): relax DBExecutor return type and harden test teardown - Changed DBExecutor return type from any[] to any to support INSERT/UPDATE results. - Added null check for db in sql.test.ts afterEach to prevent undefined access on failure.
test: add bun compatibility layer to SQL integration tests
Replaced static 'better-sqlite3' import with a dynamic adapter that detects the runtime. Uses 'bun:sqlite' when running in Bun to avoid native module ABI issues, and falls back to 'better-sqlite3' in Node.

--- a/.relay/transactions/58.yaml
+++ b/.relay/transactions/58.yaml
@@ -465,6 +465,6 @@ approved: true
 linesAdded: 339
 linesRemoved: 0
 linesDifference: 339
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T07:28:49.585Z'
 status: committed
 id: 58
