--- a/.relay/transactions/57.yaml
+++ b/.relay/transactions/57.yaml
@@ -533,6 +533,6 @@ approved: true
 linesAdded: 119
 linesRemoved: 0
 linesDifference: 119
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T07:28:49.585Z'
 status: committed
 id: 57
