refactor(test): migrate from vitest to bun:test Replaced the vitest testing framework with bun:test to leverage Bun's higher performance test runner. This includes: - Updating the test script in package.json. - Swapping the  dev dependency for . - Configuring  to recognize Bun's types. - Changing test imports across all test suites to use .

--- a/.relay/transactions/59.yaml
+++ b/.relay/transactions/59.yaml
@@ -230,6 +230,6 @@ approved: true
 linesAdded: 3
 linesRemoved: 3
 linesDifference: 6
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T07:41:45.102Z'
 status: committed
 id: 59
