--- a/.relay/transactions/60.yaml
+++ b/.relay/transactions/60.yaml
@@ -368,6 +368,6 @@ approved: true
 linesAdded: 60
 linesRemoved: 7
 linesDifference: 67
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T07:41:45.102Z'
 status: committed
 id: 60
