fix(core): validation and sandbox execution stability - Added AST validation for restricted imports in validation tool. - Refined magic number detection logic. - Fixed 'module is not defined' error in sandbox by explicitly declaring CJS globals. - Optimized memory limit unit test to prevent hangs by using larger allocation chunks. - Relaxed timeout error matching for sandbox tests.

--- a/.relay/transactions/61.yaml
+++ b/.relay/transactions/61.yaml
@@ -956,6 +956,6 @@ approved: true
 linesAdded: 7
 linesRemoved: 6
 linesDifference: 13
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T07:54:37.304Z'
 status: committed
 id: 61
