--- a/repomix.config.json
+++ b/repomix.config.json
@@ -25,8 +25,8 @@
   "include": [
 //"README.md",
 //"test-docs/"
-"test/",
-"test-docs/e2e.test-plan.md"
+//"test/",
+//"test-docs/unit.test-plan.md"
 ],
   "ignore": {
     "useGitignore": true,
@@ -39,7 +39,8 @@
       "LICENSE",
       ".gitignore",
       "tsconfig.tsbuildinfo",
-//	"test/"
+//	"test/",
+//	"test-docs/"
 //        "test/e2e/",
 //	"src"
     ]
