fix(sandbox): inject CJS runtime globals to support esbuild output in strict mode

--- a/.relay/transactions/65.yaml
+++ b/.relay/transactions/65.yaml
@@ -571,6 +571,6 @@ approved: true
 linesAdded: 11
 linesRemoved: 10
 linesDifference: 21
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T08:19:05.147Z'
 status: committed
 id: 65
