fix(test): restrict bun test scope and improve runtime detection - Point 'bun test' to 'test/' dir to avoid running compiled JS in 'dist/' - Use 'typeof Bun' for robust environment detection in SQL tests to prevent loading better-sqlite3 in Bun - Add 'Bun' to eslint globals

--- a/.relay/transactions/66.yaml
+++ b/.relay/transactions/66.yaml
@@ -634,6 +634,6 @@ approved: true
 linesAdded: 23
 linesRemoved: 12
 linesDifference: 35
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T08:22:19.185Z'
 status: committed
 id: 66
