--- a/.relay/transactions/68.yaml
+++ b/.relay/transactions/68.yaml
@@ -365,6 +365,6 @@ approved: true
 linesAdded: 3
 linesRemoved: 3
 linesDifference: 6
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T08:37:27.603Z'
 status: committed
 id: 68
