test: verify Vercel AI SDK compatibility with MockLanguageModelV1 integration test
Added  to devDependencies.
Created  fixture to simulate LLM interaction deterministically.
Added  to verify  works with  end-to-end.

test: Upgrade MockLanguageModel to v2 spec for AI SDK 5 compatibility
The Vercel AI SDK v5 requires language models to implement specification version 'v2'. Updated the test fixture and integration test to comply with the new specification, resolving the AI_UnsupportedModelVersionError.

--- a/repomix.config.json
+++ b/repomix.config.json
@@ -40,7 +40,7 @@
       ".gitignore",
       "tsconfig.tsbuildinfo",
 //	"test/",
-//	"test-docs/"
+	"test-docs/"
 //        "test/e2e/",
 //	"src"
     ]
