fix(test): update MockLanguageModelV2 responses to match AI SDK V2 spec Replaces legacy  and  properties with the standardized  array structure required by the Vercel AI SDK Core V2. This resolves the  during integration tests.

--- a/.relay/transactions/69.yaml
+++ b/.relay/transactions/69.yaml
@@ -339,6 +339,6 @@ approved: true
 linesAdded: 129
 linesRemoved: 4
 linesDifference: 133
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T09:48:31.305Z'
 status: committed
 id: 69
