--- a/.relay/transactions/70.yaml
+++ b/.relay/transactions/70.yaml
@@ -216,6 +216,6 @@ approved: true
 linesAdded: 11
 linesRemoved: 16
 linesDifference: 27
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T09:48:31.305Z'
 status: committed
 id: 70
