--- a/.relay/transactions/71.yaml
+++ b/.relay/transactions/71.yaml
@@ -191,6 +191,6 @@ approved: true
 linesAdded: 4
 linesRemoved: 5
 linesDifference: 9
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T10:05:13.195Z'
 status: committed
 id: 71
