--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "@tgp/core",
+  "name": "tool-generation-protocol",
   "version": "0.0.1",
   "description": "The Tool Generation Protocol",
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist",
+    "bin",
+    "README.md"
+  ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsup",
     "dev": "tsx src/cli/index.ts",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
@@ -34,6 +47,7 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "tsup": "^8.0.2",
     "ai": "5.0.104",
     "@types/node": "^20.19.25",
     "@types/better-sqlite3": "^7.6.9",
