fix(cli): use node: protocol for fs/path imports
- src/cli/init.ts: Update imports to use  and  to ensure compatibility and avoid resolution issues. - test/e2e/scenarios.test.ts: Log stderr if CLI bootstrap fails to aid debugging.

--- a/.relay/transactions/73.yaml
+++ b/.relay/transactions/73.yaml
@@ -782,6 +782,6 @@ approved: true
 linesAdded: 38
 linesRemoved: 9
 linesDifference: 47
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T10:44:39.886Z'
 status: committed
 id: 73
