--- a/.relay/transactions/74.yaml
+++ b/.relay/transactions/74.yaml
@@ -343,6 +343,6 @@ approved: true
 linesAdded: 5
 linesRemoved: 6
 linesDifference: 11
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T10:44:39.886Z'
 status: committed
 id: 74
