- Added entries for all source files that tests need to import   - Changed format from ['cjs', 'esm'] to ['esm'] to focus on ESM for this CLI   tool   - Maintained all other build settings (sourcemaps, types, etc.)

--- a/.relay/transactions/75.yaml
+++ b/.relay/transactions/75.yaml
@@ -512,6 +512,6 @@ approved: true
 linesAdded: 6
 linesRemoved: 3
 linesDifference: 9
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T10:49:50.309Z'
 status: committed
 id: 75
